[workspace]
members  = [".", "uv-core", "uv-engine", "uv-macros", "uv-crypto", "uv-proto",
            "uv-ffi", "uv-output", "uv-scan", "uv-os", "uv-ports", "uv-vuln"]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1",   features = ["full"] }
async-trait        = "0.1"
serde              = { version = "1",   features = ["derive"] }
thiserror          = "1"
anyhow             = "1"
log                = "0.4"
futures            = "0.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender   = "0.2"

[package]
name = "uv"
version = "0.1.0"
authors = ["sayavdera"]
edition = "2021"
description = "Ultra-fast async port scanner — masscan speed, nmap intelligence, Rust + C23 hybrid"
license = "GPL-3.0-only"
keywords = ["port", "scanning", "async", "network", "security"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
exclude = [
    ".github/*",
    "pictures/*",
    "masscan-master/*",
    "nmap-master/*",
    "ncrack-master/*",
    "npcap-master/*",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
colored = "3.1.1"
async-std = "1.13.2"
futures = "0.3"
rlimit = "0.11.0"
log                = "0.4.32"
env_logger         = "0.11.10"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = "0.2"
anstream = "=1.0.0"
dirs = "6.0.0"
gcd = "2.0.1"
rand = "0.10.1"
colorful = "0.3.2"
ansi_term = "0.12.1"
toml = "1.1.2"
serde = "1.0.124"
serde_derive = "1.0.116"
cidr-utils = "0.6.2"
itertools = "0.14.0"
hickory-resolver = { version = "0.24.3", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
uv-core   = { path = "uv-core" }
uv-engine = { path = "uv-engine" }
tokio     = { version = "1", features = ["full"] }
text_placeholder = { version = "0.5", features = ["struct_context"] }
once_cell = "1.21.4"

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }

[package.metadata.deb]
depends = "$auto, nmap"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "uv"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[[bench]]
name = "benchmark_portscan"
harness = false
