[package]
name        = "uv-core"
version     = "0.1.0"
edition     = "2021"
description = "uv core — contracts, types, traits, errors"
license     = "GPL-3.0-only"

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
futures     = { workspace = true }
log         = { workspace = true }
anyhow      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
