[package]
name        = "uv-output"
version     = "0.1.0"
edition     = "2021"
description = "uv output — pluggable formatters: plain, greppable, JSON, XML"
build       = "build.rs"

[build-dependencies]
cc = "1"

[dependencies]
uv-core = { path = "../uv-core" }
serde   = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
